--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,14 +1,20 @@
 {% include 'recipes/partials/head.html' %}
 
-<body>
-    {% include 'recipes/partials/header.html' %}
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <title>{% block title %}{% endblock title %} Recipes</title>
+  </head>
 
+  <body>
+    {% include 'recipes/partials/header.html' %}
+    
     {% include 'recipes/partials/search.html' %}
 
     <main class="main-content-container">
-        {% block content %}{% endblock content %}
+      {% block content %}{% endblock content %}
     </main>
 
     {% include 'recipes/partials/footer.html' %}
-</body>
+  </body>
 </html>
