--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,4 +1,4 @@
-{% include 'recipes/partials/head.html' %}
+{% include 'global/partials/head.html' %}
 
 <!DOCTYPE html>
 <html lang="pt-BR">
@@ -7,16 +7,16 @@
   </head>
 
   <body>
-    {% include 'recipes/partials/header.html' %}
+    {% include 'global/partials/header.html' %}
     
-    {% include 'recipes/partials/search.html' %}
+    {% include 'global/partials/search.html' %}
 
     <main class="main-content-container">
       {% block content %}{% endblock content %}
 
-      {% include 'recipes/partials/pagination.html' %}
+      {% include 'global/partials/pagination.html' %}
     </main>
 
-    {% include 'recipes/partials/footer.html' %}
+    {% include 'global/partials/footer.html' %}
   </body>
 </html>
