--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,22 +1,21 @@
-{% include 'global/partials/head.html' %}
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    {% include 'global/partials/head.html' %}
     <title>{% block title %}{% endblock title %} Recipes</title>
   </head>
 
   <body>
-    {% include 'global/partials/header.html' %}
-    
-    {% include 'global/partials/search.html' %}
+    {% include 'global/partials/header.html' %} {% include
+    'global/partials/search.html' %}
 
     <main class="main-content-container">
-      {% block content %}{% endblock content %}
-
-      {% include 'global/partials/pagination.html' %}
+      {% block content %}{% endblock content %} {% include
+      'global/partials/pagination.html' %}
     </main>
 
     {% include 'global/partials/footer.html' %}
+    <script src="{% static 'global/js/scripts.js'%}"></script>
   </body>
 </html>
