refactor: delete de receitas

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -7,12 +8,12 @@
   </head>
 
   <body>
-    {% include 'global/partials/header.html' %} {% include
-    'global/partials/search.html' %}
+    {% include 'global/partials/header.html' %}
+    {% include 'global/partials/search.html' %}
 
     <main class="main-content-container">
-      {% block content %}{% endblock content %} {% include
-      'global/partials/pagination.html' %}
+      {% block content %}{% endblock content %}
+      {% include 'global/partials/pagination.html' %}
     </main>
 
     {% include 'global/partials/footer.html' %}
