--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,20 +1,19 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="{{ html_language }}">
   <head>
     {% include 'global/partials/head.html' %}
     <title>{% block title %}{% endblock title %} Recipes</title>
   </head>
 
   <body>
-    {% include "global/partials/menu.html" %}
-    {% include 'global/partials/header.html' %}
-    {% include 'global/partials/search.html' %}
+    {% include "global/partials/menu.html" %} {% include
+    'global/partials/header.html' %} {% include 'global/partials/search.html' %}
 
     <main class="main-content-container">
-      {% block content %}{% endblock content %}
-      {% include 'global/partials/pagination.html' %}
+      {% block content %}{% endblock content %} {% include
+      'global/partials/pagination.html' %}
     </main>
 
     {% include 'global/partials/footer.html' %}
