--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,8 +8,9 @@
   </head>
 
   <body>
-    {% include "global/partials/menu.html" %} {% include
-    'global/partials/header.html' %} {% include 'global/partials/search.html' %}
+    {% include "global/partials/menu.html" %} 
+    {% include 'global/partials/header.html' %}
+    {% include 'global/partials/search.html' %}
 
     <main class="main-content-container">
       {% block content %}{% endblock content %} {% include
